--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -261,3 +261,21 @@
 }
 
 /* /Survey */
+
+/* Jadwal */
+
+#cardjad {
+    background-color: #ffffffe5;
+    border-radius: 25px;
+}
+
+.jadwal {
+    background-image: url('../assets/cc5.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+}
+
+/* /Jadwal */
