--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -1,3 +1,47 @@
+/* Header */
+.logonav {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+
+.logonav-1 {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin-right: -10px;
+  }
+
+  /* Media query untuk menyesuaikan gambar pada layar kecil hingga besar */
+  @media (min-width: 280px) {
+    .logonav {
+      max-width: 100px; /* Sesuaikan dengan kebutuhan Anda */
+    }
+    .logonav-1 {
+        max-width: 80px; /* Sesuaikan dengan kebutuhan Anda */
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .logonav {
+      max-width: 150px; /* Sesuaikan dengan kebutuhan Anda */
+    }
+    .logonav-1 {
+        max-width: 130px; /* Sesuaikan dengan kebutuhan Anda */
+    }
+  }
+  
+  @media (min-width: 1024px) {
+    .logonav {
+      max-width: 200px; /* Sesuaikan dengan kebutuhan Anda */
+    }
+    .logonav-1 {
+        max-width: 165px; /* Sesuaikan dengan kebutuhan Anda */
+    }
+  }
+  
+
+
 /* Beranda */
 .NavbarSt {
     background-color: #D9D9D970;
@@ -196,28 +240,98 @@
 
 /* Registrasi */
 .registrasi {
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
     background-image: url('../assets/cc5.jpg');
     background-size: cover;
-    height: 100vh;
-    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.card-container {
+    flex: 1;
 }
 
 #cardreg {
     background-color: #ffffffe5;
-    margin-inline-end: 100px;
-    margin-inline-start: 100px;
     border-radius: 25px;
+    
+    margin-inline-start: 5px; 
+    margin-inline-end: 5px;   
+}
+
+.button {
+    width: 100%;
+    max-width: 200px;
+    margin: 0 auto; 
+}
+
+/* Gaya tambahan untuk membuat teks "Lanjutkan" responsif */
+h4 {
+    font-size: 20px; /* Ukuran font dasar */
+}
+
+/* Media query untuk mengubah ukuran font pada ukuran layar tertentu jika diperlukan */
+@media (min-width: 280px) {
+    #cardreg {
+        margin-top: 3rem;
+        margin-inline-start: 10px;
+        margin-inline-end: 10px;
+    }
+    .button {
+        max-width: 100%; /* Lebar maksimum pada ukuran layar kurang dari 720px */
+        margin-top: 20px; /* Tambahkan margin atas untuk menjaga jarak dengan elemen di atasnya */
+    }
+    h4 {
+        font-size: 16px; /* Ukuran font pada layar berukuran kecil (kurang dari 720px) */
+    }
+}
+
+/* Media query untuk ukuran layar 720px */
+@media (min-width: 768px) {
+    #cardreg {
+        margin-top: 3rem;
+        margin-inline-start: 20px;
+        margin-inline-end: 20px;
+    }
+    .button {
+        max-width: 150px; /* Lebar maksimum pada ukuran layar 720px atau lebih besar */
+    }
+    h4 {
+        font-size: 18px; /* Ukuran font pada layar berukuran kecil (720px atau lebih besar) */
+    }
+}
+
+
+@media (min-width: 980px) {
+    #form {
+        margin-inline-start: 50px;
+        margin-inline-end: 50px;
+    }
+    #cardreg {
+        margin-top: 1rem;
+        margin-inline-start: 200px;
+        margin-inline-end: 200px;
+    }
+    .button {
+        max-width: 200px; /* Lebar maksimum pada ukuran layar 1024px atau lebih besar */
+    }
+    h4 {
+        font-size: 24px; /* Ukuran font pada layar berukuran besar (desktop) */
+    }
 }
 
 #foreg {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 #form {
-    margin-inline-start: 50px;
-    margin-inline-end: 50px;
+    margin-inline-start: 10px;
+    margin-inline-end: 10px;
 }
 
 #formgroup {
@@ -225,15 +339,289 @@
     border-width: 1px;
     border-color: black;
 }
+/* /Registrasi */
 
-#jumlahtamu {
+/* Ruang */
+.custom-spacing {
+    white-space: nowrap; /* Mencegah teks pindah ke baris baru */
+    margin-left: -30px;
+    display: inline-block; /* Membuat elemen berperilaku seperti inline tapi memiliki sifat blok */
+}
+
+.ruang {
+    height: 100vh;
+    overflow-y: auto; /* atau overflow-y: scroll; */
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    background-image: url('../assets/cc5.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+
+#rows {
+    display: flex;
+    flex-direction: column;
+    width: 100%; /* Sesuaikan dengan kebutuhan */
+    margin-top: 1.5rem;
+    margin-bottom: 0px;
+  }
+  
+#rows h6,
+#rows ul {
+width: 150%; /* Sesuaikan dengan kebutuhan */
+}
+
+#tanda {
+    display: flex;
+    margin-top: 10px; 
+}
+
+#tanda h3{
+    display: flex;
+    margin-top: 10px; 
+}
+
+#cardregs {
+    background-color: #ffffffe5;
+    border-radius: 25px;
+    margin-inline-start: 5px; 
+    margin-inline-end: 5px;
+    margin-top: 3rem;   
+}
+
+#forms {
+    margin-inline-start: 5px;
+    margin-inline-end: 5px;
+}
+
+#keperluan {
+    width: 150px;
     background-color: #D9D9D9;
     border-width: 1px;
     border-color: black;
-    width: 70px;
 }
-/* /Registrasi */
 
+#calendar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#calendar > div {
+    width: 10%; 
+    margin-bottom: 0px; 
+}
+
+/* #calendar {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); Mengatur tiga kolom
+    gap: 10px; Memberikan jarak antara kolom
+} */
+/* 
+#calendar > div {
+    width: 100%;
+} */
+
+/* Media query untuk mengubah ukuran font pada ukuran layar tertentu jika diperlukan */
+@media (min-width: 280px) {
+    #kartu {
+        flex-direction: column;
+    }
+    .jarak-a {
+        margin-top: 1rem;
+    }
+    #cardregs {
+        margin-top: 2rem;
+        margin-inline-start: 5px;
+        margin-inline-end: 5px;
+    }
+    .col-5 {
+        width: 100%; /* Menyusutkan lebar kolom menjadi 100% pada layar yang lebih kecil */
+    }
+    .col-5 div {
+    text-align: center; /* Mengatur posisi teks menjadi tengah */
+    margin: 15px 0; /* Memberikan ruang di atas dan di bawah teks */
+    }
+    #tanda h3{
+        margin-top: 10px; 
+        margin-inline-start: 0px;
+        font-size: larger;
+    }
+    #rows {
+        /* 'col-9 mt-4' */
+        width: 75%;
+        margin-top: 0rem;
+        order: 1;
+    }
+    .custom-spacing {
+        white-space: normal; /* Mencegah teks pindah ke baris baru */
+        margin-left: -30px;
+        display: inline-block;
+    }
+    #perlu {
+        order: 2; /* Mengatur urutan elemen menjadi 2 */
+        text-align: left; /* Menetapkan teks ke kiri */
+        margin-top: 1rem; /* Memberikan margin atas */
+    }
+    #calendar > div {
+        width: calc(50% - 5px); /* Mengatur dua kolom, dengan margin di antara */
+    }
+    /* #calendar {
+        grid-template-columns: repeat(2, 1fr); Mengatur dua kolom saat layar lebih besar atau sama dengan 280px
+    } */
+}
+
+/* Media query untuk ukuran layar 720px */
+@media (min-width: 768px) and (max-width: 990px) {
+    #kartu {
+        flex-direction: row;
+        justify-content: space-between; /* Memberikan ruang di sekitar elemen */
+        align-items: center; /* Menengahkan elemen pada sumbu vertikal */
+    }
+    #cardregs {
+        margin-top: 1rem;
+        margin-inline-start: 20px;
+        margin-inline-end: 20px;
+    }
+    #tanda h3 {
+        margin-top: 0; /* Menghapus margin atas */
+        margin-inline-start: auto; /* Mengatur margin kiri menjadi otomatis */
+        margin-inline-end: 0; /* Menghapus margin kanan */
+        font-size: x-large;
+    }
+    #rows {
+        width: auto; /* Menetapkan lebar menjadi otomatis */
+        margin-top: 1.5rem;
+        order: 1;
+    }
+    .custom-spacing {
+        margin-left: 0px;
+    }
+    #perlu {
+        order: 2; /* Mengatur urutan elemen menjadi 2 (ke kanan) */
+        text-align: right; /* Menetapkan teks ke kanan */
+        margin-top: 0; /* Menghapus margin atas */
+        flex: 0 0 25%; /* Sesuaikan dengan kebutuhan lebar kolom Anda */
+    }
+    #tanda {
+        display: flex;
+        margin-top: 40px; 
+        margin-inline-start: 250px;
+    }
+    #calendar > div {
+        width: calc(35% - 5px); /* Mengatur dua kolom, dengan margin di antara */
+    }
+}
+
+
+@media (min-width: 991px) {
+    #kartu {
+        flex-direction: row;
+        justify-content: space-between; /* Memberikan ruang di sekitar elemen */
+        align-items: center; /* Menengahkan elemen pada sumbu vertikal */
+    }
+    #cardregs {
+        margin-top: 1rem;
+        margin-inline-start: 150px;
+        margin-inline-end: 150px;
+    }
+    #tanda h3 {
+        margin-top: 0; /* Menghapus margin atas */
+        margin-inline-start: auto; /* Mengatur margin kiri menjadi otomatis */
+        margin-inline-end: 0; /* Menghapus margin kanan */
+        font-size: x-large;
+    }
+    #rows {
+        width: auto; /* Menetapkan lebar menjadi otomatis */
+        margin-top: 1.5rem;
+        order: 1;
+    }
+    .custom-spacing {
+        margin-left: 0px;
+    }
+    #perlu {
+        order: 2; /* Mengatur urutan elemen menjadi 2 (ke kanan) */
+        text-align: right; /* Menetapkan teks ke kanan */
+        margin-top: 0; /* Menghapus margin atas */
+        flex: 0 0 25%; /* Sesuaikan dengan kebutuhan lebar kolom Anda */
+    }
+    #tanda {
+        display: flex;
+        margin-top: 40px; 
+        margin-inline-start: 230px;
+    }
+    #calendar > div {
+        width: calc(35% - 5px); /* Mengatur dua kolom, dengan margin di antara */
+    }
+}
+
+@media (min-width: 1200px) {
+    #kartu {
+        flex-direction: row;
+        justify-content: space-between; /* Memberikan ruang di sekitar elemen */
+        align-items: center; /* Menengahkan elemen pada sumbu vertikal */
+    }
+    #cardregs {
+        margin-top: 1rem;
+        margin-inline-start: 150px;
+        margin-inline-end: 150px;
+    }
+    #tanda h3 {
+        margin-top: 0; /* Menghapus margin atas */
+        margin-inline-start: auto; /* Mengatur margin kiri menjadi otomatis */
+        margin-inline-end: 0; /* Menghapus margin kanan */
+        font-size: x-large;
+    }
+    #rows {
+        width: auto; /* Menetapkan lebar menjadi otomatis */
+        margin-top: 1.5rem;
+        order: 1;
+    }
+    .custom-spacing {
+        margin-left: 0px;
+    }
+    #perlu {
+        order: 2; /* Mengatur urutan elemen menjadi 2 (ke kanan) */
+        text-align: right; /* Menetapkan teks ke kanan */
+        margin-top: 0; /* Menghapus margin atas */
+        flex: 0 0 25%; /* Sesuaikan dengan kebutuhan lebar kolom Anda */
+    }
+    #keperluan {
+        width: 180px;
+        background-color: #D9D9D9;
+        border-width: 1px;
+        border-color: black;
+    }
+    #tanda {
+        display: flex;
+        margin-top: 40px; 
+        margin-inline-start: 350px;
+    }
+    #calendar > div {
+        width: calc(25% - 5px); /* Mengatur dua kolom, dengan margin di antara */
+    }
+}
+
+
+/* @media (min-width: 980px) {
+    #form {
+        margin-inline-start: 50px;
+        margin-inline-end: 50px;
+    }
+    #cardreg-1 {
+        margin-top: 1rem;
+        margin-inline-start: 200px;
+        margin-inline-end: 200px;
+    }
+    #status {
+        margin-top: 40px; 
+        margin-inline-start: 170px;
+    }
+} */
+
+/* Ruang */
 
 /* Survey */
 .star {
@@ -279,3 +667,5 @@
 }
 
 /* /Jadwal */
+
+
