--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -20,7 +20,7 @@
 }
 
 #rowlp {
-    margin-top: 250px;
+    margin-top: 200px;
 }
 
 .TextBrn {
@@ -30,7 +30,7 @@
 #judullp {
     color: white;
     font-weight: 400; 
-    font-size: 40px;
+    font-size: 35px;
 }
 
 #btnmar {
@@ -42,7 +42,7 @@
 }
 
 #btnlp-1, #btnlp-2, #btnlp-3 {
-    width: 60%;
+    width: 50%;
     background-color: #FDCD04;
 }
 
@@ -449,7 +449,13 @@ input[type="number"]::-webkit-outer-spin-button {
     /* Header */
     /* Beranda */
     #rowlp {
-        margin-top: 150px;
+        margin-top: 120px;
+    }
+    h3.plp {
+        color: black;
+        font-weight: 500; 
+        font-family: inherit;
+        font-size: 15px;
     }
     /* Beranda */
     /* Registrasi */
@@ -654,11 +660,17 @@ input[type="number"]::-webkit-outer-spin-button {
   @media (min-width:576px) {
     /* Beranda */
     #rowlp {
-        margin-top: 200px;
+        margin-top: 160px;
     }
     #btnlp-1, #btnlp-2, #btnlp-3 {
         width: 50%;
         background-color: #FDCD04;
+    }
+    h3.plp {
+        color: black;
+        font-weight: 500; 
+        font-family: inherit;
+        font-size: 20px;
     }
 
     
@@ -772,7 +784,7 @@ input[type="number"]::-webkit-outer-spin-button {
     /* Header */
     /* Beranda */
     #rowlp {
-        margin-top: 250px;
+        margin-top: 220px;
     }
     #btnlp-1, #btnlp-2, #btnlp-3 {
         width: 80%;
