--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -431,6 +431,22 @@ input[type="number"]::-webkit-outer-spin-button {
     min-height: 100vh;
 }
 
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px; 
+}
+
+.pagination button {
+    margin: 0 10px;
+    padding: 5px 18px; 
+    cursor: pointer;
+    border: 1px solid black;
+    border-radius: 8px;
+}
+  
+
 .jatem {
     font-size: 14px;
 }
